# espnffscraper

./: .gitignore  LICENSE  README.md  base_league.py  espnffscraper.py  fonts.txt  package.json  pyproject.toml  requirements.txt
request/: espn_requests.py
settings/: settings.py
utils/: logger.py
